--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.myContainer {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.landing {
+  width: 100vw;
+  padding: 0;
+  /* height:100vh; */
+  background-color: #000000;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  background-position:left !important;
+  /* background-position-y: 0px !important; */
+ /* transform: scale(1.6); */
+  
+  background-size: cover !important;
+  background-repeat: no-repeat !important;
+  position: relative !important;
+  overflow: hidden !important;
+}
+
+.landing-card {
+  font-size: 4.5rem;
+  font-weight: 600;
+  font-family: "Roboto", sans-serif;
+  margin-left: 35px;
+  margin-top: -50px;
+}
+
+.landing-heading {
+  color: #ea0f1e;
+  padding: 0rem 0rem;
+  margin: -0.5rem 0rem;
+  transition: all 0.4s ease;
+  /* background-color: #000; */
+  /* padding:20px 0px 0px 0px; */
+  /* margin-top: -50px; */
+}
+
+/* .landing-heading:hover{
+    transform: translatex(30px)
+
+} */
+
+.landing-heading::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  padding: 250px 0px;
+  z-index: 20;
+}
+
+.text-container {
+  /* border: 1px solid white; */
+  /* padding-top: 30px; */
+  background-color: #000;
+}
+
+.white-text {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.popup-text{
+  color: wheat;
+  position: absolute;
+  margin: 1rem;
+  /* width: 100%;
+  height: 100%; */
+  /* display: flex;
+  justify-content: center; */
+  bottom: 0;
+  left: 50%;
+ 
 }
