--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,9 @@
   /* height:100vh; */
   background-color: #000000;
   display: flex;
-  /* justify-content: center; */
   align-items: center;
   background-position:left !important;
-  /* background-position-y: 0px !important; */
- /* transform: scale(1.6); */
+  background-position-x: -200px !important;
   
   background-size: cover !important;
   background-repeat: no-repeat !important;
